--- a/styles/main.css
+++ b/styles/main.css
@@ -42,10 +42,11 @@ header h1 {
 #main {
 	position: relative;
 	top: 51px;
-	left: 20%;
-	width: 60%;
-	height: 100%;
+	left: 25%;
+	width: 50%;
+	height: 70%;
 	padding: 10px;
+	color: rgb(200, 200, 200);
 	overflow: auto;
 }
 
@@ -81,7 +82,7 @@ header h1 {
 }
 
 #results {
-	height: 72%;
+	height: 68%;
 	overflow-y: scroll;
 }
 #results::-webkit-scrollbar{
